--- a/07 Spatial Techniques/03 FieldData/GIS.ipynb
+++ b/07 Spatial Techniques/03 FieldData/GIS.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\LUNA\\AppData\\Local\\Temp\\ipykernel_5844\\2458029604.py:1: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df.fillna(method = 'ffill', inplace = True)\n",
+      "C:\\Users\\LUNA\\AppData\\Local\\Temp\\ipykernel_5844\\2458029604.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['Area' 'Area' 'Area' ... 'Trees' 'Trees' 'Trees']' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  df[\"desc\"].fillna(df['name'], inplace = True)\n"
+     ]
+    }
+   ],
    "source": [
     "df.fillna(method = 'ffill', inplace = True)\n",
     "df[\"eos\"].fillna(1, inplace = True)\n",
@@ -47,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,9 +71,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fid</th>\n",
+       "      <th>altitude (m)</th>\n",
+       "      <th>desc</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1521.2</td>\n",
+       "      <td>Area</td>\n",
+       "      <td>POINT (278867.357 9878331.137)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1522.5</td>\n",
+       "      <td>Area</td>\n",
+       "      <td>POINT (278973.918 9878345.402)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1522.7</td>\n",
+       "      <td>Area</td>\n",
+       "      <td>POINT (278968.116 9878465.611)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1523.2</td>\n",
+       "      <td>Area</td>\n",
+       "      <td>POINT (278965.180 9878531.578)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1522.2</td>\n",
+       "      <td>Area</td>\n",
+       "      <td>POINT (278872.928 9878533.664)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1520.8</td>\n",
+       "      <td>Area</td>\n",
+       "      <td>POINT (278818.728 9878524.602)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1520.1</td>\n",
+       "      <td>Area</td>\n",
+       "      <td>POINT (278752.434 9878500.666)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1521.2</td>\n",
+       "      <td>Area</td>\n",
+       "      <td>POINT (278867.357 9878331.137)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>1521.6</td>\n",
+       "      <td>Building</td>\n",
+       "      <td>POINT (278870.516 9878469.212)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1522.8</td>\n",
+       "      <td>Building</td>\n",
+       "      <td>POINT (278937.880 9878471.998)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fid altitude (m)      desc                        geometry\n",
+       "0    1       1521.2      Area  POINT (278867.357 9878331.137)\n",
+       "1    2       1522.5      Area  POINT (278973.918 9878345.402)\n",
+       "2    3       1522.7      Area  POINT (278968.116 9878465.611)\n",
+       "3    4       1523.2      Area  POINT (278965.180 9878531.578)\n",
+       "4    5       1522.2      Area  POINT (278872.928 9878533.664)\n",
+       "5    6       1520.8      Area  POINT (278818.728 9878524.602)\n",
+       "6    7       1520.1      Area  POINT (278752.434 9878500.666)\n",
+       "7    8       1521.2      Area  POINT (278867.357 9878331.137)\n",
+       "8    9       1521.6  Building  POINT (278870.516 9878469.212)\n",
+       "9   10       1522.8  Building  POINT (278937.880 9878471.998)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gdf = gpd.GeoDataFrame(data = df, crs = \"EPSG:4326\", geometry = gpd.points_from_xy(df.longitude, df.latitude)) # type: ignore\n",
     "gdf.drop(columns = [\"longitude\", \"latitude\"], inplace = True)\n",
@@ -77,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,21 +224,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\LUNA\\envs\\GIS\\lib\\site-packages\\geopandas\\geodataframe.py:204: FutureWarning: You are adding a column named 'geometry' to a GeoDataFrame constructed without an active geometry column. Currently, this automatically sets the active geometry column to 'geometry' but in the future that will no longer happen. Instead, either provide geometry to the GeoDataFrame constructor (GeoDataFrame(... geometry=GeoSeries()) or use `set_geometry('geometry')` to explicitly set the active geometry column.\n",
+      "  object.__setattr__(self, attr, val)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>POINT (278840.597 9878582.683)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>POINT (278943.938 9878602.174)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>POINT (278918.522 9878743.349)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>POINT (278904.820 9878820.828)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>POINT (278812.995 9878820.927)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>POINT (278760.729 9878808.890)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>POINT (278698.901 9878779.058)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>POINT (278840.597 9878582.683)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>POINT (278821.145 9878745.092)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>POINT (278887.493 9878750.086)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         geometry\n",
+       "0  POINT (278840.597 9878582.683)\n",
+       "1  POINT (278943.938 9878602.174)\n",
+       "2  POINT (278918.522 9878743.349)\n",
+       "3  POINT (278904.820 9878820.828)\n",
+       "4  POINT (278812.995 9878820.927)\n",
+       "5  POINT (278760.729 9878808.890)\n",
+       "6  POINT (278698.901 9878779.058)\n",
+       "7  POINT (278840.597 9878582.683)\n",
+       "8  POINT (278821.145 9878745.092)\n",
+       "9  POINT (278887.493 9878750.086)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Transform to corresponding coordinates\n",
     "gdf2 = gpd.GeoDataFrame((gdf.affine_transform([a, b, c, d, e, f])))\n",
     "gdf2.geometry = gdf2[0]\n",
     "gdf2.drop(columns = [0], inplace = True)\n",
     "gdf2.set_crs(\"EPSG:32737\")\n",
-    "# gdf2.head(10)\n"
+    "gdf2.head(10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +349,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>P</th>\n",
+       "      <th>N</th>\n",
+       "      <th>E</th>\n",
+       "      <th>Z</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>9.878583e+06</td>\n",
+       "      <td>278840.596838</td>\n",
+       "      <td>1521.2</td>\n",
+       "      <td>Area</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>9.878602e+06</td>\n",
+       "      <td>278943.937595</td>\n",
+       "      <td>1522.5</td>\n",
+       "      <td>Area</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>9.878743e+06</td>\n",
+       "      <td>278918.522426</td>\n",
+       "      <td>1522.7</td>\n",
+       "      <td>Area</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>9.878821e+06</td>\n",
+       "      <td>278904.820420</td>\n",
+       "      <td>1523.2</td>\n",
+       "      <td>Area</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>9.878821e+06</td>\n",
+       "      <td>278812.995154</td>\n",
+       "      <td>1522.2</td>\n",
+       "      <td>Area</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9.878809e+06</td>\n",
+       "      <td>278760.728990</td>\n",
+       "      <td>1520.8</td>\n",
+       "      <td>Area</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>9.878779e+06</td>\n",
+       "      <td>278698.901298</td>\n",
+       "      <td>1520.1</td>\n",
+       "      <td>Area</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>9.878583e+06</td>\n",
+       "      <td>278840.596838</td>\n",
+       "      <td>1521.2</td>\n",
+       "      <td>Area</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>9.878745e+06</td>\n",
+       "      <td>278821.144984</td>\n",
+       "      <td>1521.6</td>\n",
+       "      <td>Building</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>9.878750e+06</td>\n",
+       "      <td>278887.493243</td>\n",
+       "      <td>1522.8</td>\n",
+       "      <td>Building</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    P             N              E       Z         D\n",
+       "0   1  9.878583e+06  278840.596838  1521.2      Area\n",
+       "1   2  9.878602e+06  278943.937595  1522.5      Area\n",
+       "2   3  9.878743e+06  278918.522426  1522.7      Area\n",
+       "3   4  9.878821e+06  278904.820420  1523.2      Area\n",
+       "4   5  9.878821e+06  278812.995154  1522.2      Area\n",
+       "5   6  9.878809e+06  278760.728990  1520.8      Area\n",
+       "6   7  9.878779e+06  278698.901298  1520.1      Area\n",
+       "7   8  9.878583e+06  278840.596838  1521.2      Area\n",
+       "8   9  9.878745e+06  278821.144984  1521.6  Building\n",
+       "9  10  9.878750e+06  278887.493243  1522.8  Building"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data2 = data[['fid', 'desc', 'altitude (m)']]\n",
     "data2['x'] = data.geometry.x\n",
@@ -145,12 +504,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "export = 'C:/Users/LUNA/Desktop/data.csv'\n",
-    "data2.to_csv(export, index=False, header=False)\n"
+    "# data2.to_csv(export, index=False, header=False)\n"
    ]
   }
  ],
