--- a/07 Spatial Techniques/03 FieldData/Traverse.ipynb
+++ b/07 Spatial Techniques/03 FieldData/Traverse.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,131 +45,22 @@
     "\n",
     "gdf = gdf.to_crs('EPSG:32737')                        \n",
     "\n",
-    "gdf.drop(columns = ['latitude', 'longitude'], inplace = True)"
+    "gdf.drop(columns = ['latitude', 'longitude'], inplace = True)\n",
+    "gdf_ = gdf[['altitude (m)', 'description']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>altitude (m)</th>\n",
-       "      <th>description</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1522.2</td>\n",
-       "      <td>Traverse</td>\n",
-       "      <td>POINT (278749.445 9878773.131)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1524.6</td>\n",
-       "      <td>Traverse</td>\n",
-       "      <td>POINT (278884.378 9878764.330)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1525.0</td>\n",
-       "      <td>Traverse</td>\n",
-       "      <td>POINT (278931.200 9878773.030)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1523.6</td>\n",
-       "      <td>Traverse</td>\n",
-       "      <td>POINT (278923.524 9878539.287)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1521.0</td>\n",
-       "      <td>Traverse</td>\n",
-       "      <td>POINT (278835.170 9878515.318)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1520.7</td>\n",
-       "      <td>Traverse</td>\n",
-       "      <td>POINT (278807.397 9878451.506)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1521.3</td>\n",
-       "      <td>Traverse</td>\n",
-       "      <td>POINT (278864.796 9878417.275)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1521.5</td>\n",
-       "      <td>Traverse</td>\n",
-       "      <td>POINT (278883.217 9878347.821)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1522.4</td>\n",
-       "      <td>Traverse</td>\n",
-       "      <td>POINT (278966.088 9878354.763)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1522.5</td>\n",
-       "      <td>Traverse</td>\n",
-       "      <td>POINT (278976.174 9878413.624)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   altitude (m) description                        geometry\n",
-       "0        1522.2    Traverse  POINT (278749.445 9878773.131)\n",
-       "1        1524.6    Traverse  POINT (278884.378 9878764.330)\n",
-       "2        1525.0    Traverse  POINT (278931.200 9878773.030)\n",
-       "3        1523.6    Traverse  POINT (278923.524 9878539.287)\n",
-       "4        1521.0    Traverse  POINT (278835.170 9878515.318)\n",
-       "5        1520.7    Traverse  POINT (278807.397 9878451.506)\n",
-       "6        1521.3    Traverse  POINT (278864.796 9878417.275)\n",
-       "7        1521.5    Traverse  POINT (278883.217 9878347.821)\n",
-       "8        1522.4    Traverse  POINT (278966.088 9878354.763)\n",
-       "9        1522.5    Traverse  POINT (278976.174 9878413.624)"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "gdf.head(10)"
+    "gdf_.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,129 +75,54 @@
     "\n",
     "# Transform to corresponding coordinates\n",
     "gdf2 = gpd.GeoDataFrame((gdf.affine_transform([a, b, c, d, e, f])))\n",
-    "# gdf2.set_crs(\"EPSG:32737\")"
+    "gdf2.rename({0 : 'geometry'}, axis = 1, inplace = True)\n",
+    "\n",
+    "gdf2.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>POINT (278651.372 9879099.305)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>POINT (278786.622 9879092.401)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>POINT (278831.632 9879103.823)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>POINT (278862.250 9878828.828)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>POINT (278778.552 9878798.395)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>POINT (278761.448 9878722.665)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>POINT (278823.968 9878683.886)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>POINT (278853.596 9878602.703)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>POINT (278934.642 9878612.979)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>POINT (278935.016 9878682.436)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>POINT (278871.183 9878714.587)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>POINT (278914.092 9878813.528)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>POINT (279015.665 9878831.821)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>POINT (279000.971 9879067.808)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>POINT (279065.747 9879047.131)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                 0\n",
-       "0   POINT (278651.372 9879099.305)\n",
-       "1   POINT (278786.622 9879092.401)\n",
-       "2   POINT (278831.632 9879103.823)\n",
-       "3   POINT (278862.250 9878828.828)\n",
-       "4   POINT (278778.552 9878798.395)\n",
-       "5   POINT (278761.448 9878722.665)\n",
-       "6   POINT (278823.968 9878683.886)\n",
-       "7   POINT (278853.596 9878602.703)\n",
-       "8   POINT (278934.642 9878612.979)\n",
-       "9   POINT (278935.016 9878682.436)\n",
-       "10  POINT (278871.183 9878714.587)\n",
-       "11  POINT (278914.092 9878813.528)\n",
-       "12  POINT (279015.665 9878831.821)\n",
-       "13  POINT (279000.971 9879067.808)\n",
-       "14  POINT (279065.747 9879047.131)"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "gdf2.head(30)"
+    "gdf3 = pd.concat([gdf_, gdf2], axis = 1)\n",
+    "gdf3 = gpd.GeoDataFrame(gdf3, crs = \"EPSG:32737\")\n",
+    "# gdf3.head(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ = gdf3\n",
+    "df_['x'] = gdf3.geometry.x\n",
+    "df_['y'] = gdf3.geometry.y\n",
+    "df_.drop(\"geometry\", axis = 1, inplace = True)\n",
+    "df_['P'] = df_.index + 1\n",
+    "\n",
+    "names ={\n",
+    "    \"description\" : \"D\",\n",
+    "    \"altitude (m)\" : \"Z\",\n",
+    "    \"x\" : \"E\",\n",
+    "    \"y\" : \"N\"\n",
+    "    }\n",
+    "\n",
+    "df_.rename(columns = names, inplace = True)\n",
+    "df_ = df_[['P', 'N', 'E', 'Z', 'D']]\n",
+    "df_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "export = 'C:/Users/LUNA/Desktop/Traverse.csv'\n",
+    "df_.to_csv(export, index=False, header=False)\n"
    ]
   }
  ],
