--- a/07 Spatial Techniques/03 FieldData/Traverse.ipynb
+++ b/07 Spatial Techniques/03 FieldData/Traverse.ipynb
@@ -55,6 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Transformation\n",
+    "\n",
     "e = 1618010.606367111\n",
     "f = -1741978.211608887\n",
     "\n",
