Changed Traverse Names

--- a/07 Spatial Techniques/03 FieldData/Traverse.ipynb
+++ b/07 Spatial Techniques/03 FieldData/Traverse.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,12 +70,12 @@
     "gdf2 = gpd.GeoDataFrame((gdf.affine_transform([a, b, c, d, e, f])))\n",
     "gdf2.rename({0 : 'geometry'}, axis = 1, inplace = True)\n",
     "\n",
-    "gdf2.head()"
+    "# gdf2.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>P</th>\n",
+       "      <th>N</th>\n",
+       "      <th>E</th>\n",
+       "      <th>Z</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>9.879099e+06</td>\n",
+       "      <td>278651.372306</td>\n",
+       "      <td>1522.2</td>\n",
+       "      <td>HOS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>9.879092e+06</td>\n",
+       "      <td>278786.621802</td>\n",
+       "      <td>1524.6</td>\n",
+       "      <td>Tr1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>9.879104e+06</td>\n",
+       "      <td>278831.631532</td>\n",
+       "      <td>1525.0</td>\n",
+       "      <td>Tr2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>9.878829e+06</td>\n",
+       "      <td>278862.250444</td>\n",
+       "      <td>1523.6</td>\n",
+       "      <td>Tr3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>9.878798e+06</td>\n",
+       "      <td>278778.551953</td>\n",
+       "      <td>1521.0</td>\n",
+       "      <td>Tr4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9.878723e+06</td>\n",
+       "      <td>278761.448282</td>\n",
+       "      <td>1520.7</td>\n",
+       "      <td>Tr5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>9.878684e+06</td>\n",
+       "      <td>278823.967958</td>\n",
+       "      <td>1521.3</td>\n",
+       "      <td>Tr6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>9.878603e+06</td>\n",
+       "      <td>278853.595807</td>\n",
+       "      <td>1521.5</td>\n",
+       "      <td>Tr7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>9.878613e+06</td>\n",
+       "      <td>278934.641646</td>\n",
+       "      <td>1522.4</td>\n",
+       "      <td>Tr8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>9.878682e+06</td>\n",
+       "      <td>278935.016221</td>\n",
+       "      <td>1522.5</td>\n",
+       "      <td>Tr9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>9.878715e+06</td>\n",
+       "      <td>278871.183460</td>\n",
+       "      <td>1522.0</td>\n",
+       "      <td>Tr10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>9.878814e+06</td>\n",
+       "      <td>278914.091839</td>\n",
+       "      <td>1523.0</td>\n",
+       "      <td>Tr11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>9.878832e+06</td>\n",
+       "      <td>279015.665360</td>\n",
+       "      <td>1518.9</td>\n",
+       "      <td>Tr12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>9.879068e+06</td>\n",
+       "      <td>279000.970627</td>\n",
+       "      <td>1523.9</td>\n",
+       "      <td>Tr13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>9.879047e+06</td>\n",
+       "      <td>279065.746723</td>\n",
+       "      <td>1522.4</td>\n",
+       "      <td>TN5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     P             N              E       Z     D\n",
+       "0    1  9.879099e+06  278651.372306  1522.2   HOS\n",
+       "1    2  9.879092e+06  278786.621802  1524.6   Tr1\n",
+       "2    3  9.879104e+06  278831.631532  1525.0   Tr2\n",
+       "3    4  9.878829e+06  278862.250444  1523.6   Tr3\n",
+       "4    5  9.878798e+06  278778.551953  1521.0   Tr4\n",
+       "5    6  9.878723e+06  278761.448282  1520.7   Tr5\n",
+       "6    7  9.878684e+06  278823.967958  1521.3   Tr6\n",
+       "7    8  9.878603e+06  278853.595807  1521.5   Tr7\n",
+       "8    9  9.878613e+06  278934.641646  1522.4   Tr8\n",
+       "9   10  9.878682e+06  278935.016221  1522.5   Tr9\n",
+       "10  11  9.878715e+06  278871.183460  1522.0  Tr10\n",
+       "11  12  9.878814e+06  278914.091839  1523.0  Tr11\n",
+       "12  13  9.878832e+06  279015.665360  1518.9  Tr12\n",
+       "13  14  9.879068e+06  279000.970627  1523.9  Tr13\n",
+       "14  15  9.879047e+06  279065.746723  1522.4   TN5"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df_.iloc[1:13, 4].replace('Traverse','Tr', inplace = True)\n",
+    "i = 1\n",
+    "for i, ro in enumerate(df_.iloc[1:-1, 4]):\n",
+    "    df_.iat[i+1, 4] = 'Tr' + str(i+1)\n",
+    "\n",
+    "df_.iat[0, 4] = 'HOS'\n",
+    "df_.iat[-1, 4] = 'TN5'\n",
+    "\n",
+    "df_.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
